tests/invalid/invalid_composite_literal.frag.hlsl
float4 main() : SV_Target
{
    float3 my_vector = {1, 2, 3, 4};
    return float4(1, 2, 3, 4);
}
